--- a/theme.css
+++ b/theme.css
@@ -241,7 +241,7 @@ body
   --frame-right-space:160px;
   --background-primary: var(--level1);
   --background-primary-alt: var(--level1_a);
-  --background-secondary: var(--level2);
+  --background-secondary: var(--level1);
 }body
 {
 	/* Hierarchical palette */
@@ -290,8 +290,8 @@ body:not(.disableBevels) {
     --bevelStyleFileHover: inset 1px 1px var(--level1_a);
     --bevelStyleFolder: inset 1px 1px var(--level2);
     --bevelStyleFolderHover:inset 1px 1px var(--level2_a);
-    --bevelStyleFolderLabel:inset 1px 1px var(--level2_b);
-    --bevelStyleFolderLabelHover:inset 1px 1px var(--level3_a);
+    --bevelStyleFolderLabel:inset 0px 1px var(--level2_b);
+    --bevelStyleFolderLabelHover:inset 0px 1px var(--level3_a);
     --bevelStyleTreeItem: inset 1px 1px var(--level2);
 }.theme-dark
 {
@@ -527,6 +527,7 @@ input.slider
 	flex-grow:1;
 	opacity:1;
 	height:100%;
+	justify-content:center;
 }
 .workspace-leaf-content[data-type=empty] .view-header,
 .is-focused .workspace-leaf-content[data-type=empty] .view-header,
@@ -712,7 +713,7 @@ input.slider
 	padding:0px;
 	height:100%;
 	border-right: 1px solid var(--level2);
-	border-left: 1px solid var(--level2);;
+	/*border-left: 1px solid var(--level2);;*/
 	margin-top:0px;
 	justify-content:left;
 
@@ -726,6 +727,7 @@ input.slider
 	max-width:var(--editorStackWidth);
 	flex-grow:1;
 	min-width:0px;
+	
 }
 .stackTabs .mod-root .workspace-tab-header.is-active
 {
@@ -787,7 +789,6 @@ input.slider
   background-color: var(--bottom);
   padding-left:5px;
 }
-
 .cm-sizer
 {
   max-width: var(--editorSize);
@@ -795,7 +796,179 @@ input.slider
 .markdown-reading-view blockquote p
 {
   padding-left:10px;
+}/*
+    clean-embeds-all.css snippet
+
+    Removes title, link, padding, margins from embeds,
+    so they really look like the same note.
+
+    This will not require a `cssclass` to be set but work for _all_ notes.
+    Derived from the `clean-embeds.css` snippet.
+
+    2021-05-28 Matthias C. Hormann (Moonbase59)
+
+    TODO: Find out how to correct PDF export. L/R margins & vspace too large on embeds.
+*/
+
+
+/* remove title */
+.markdown-preview-view .markdown-embed-title {
+  display: none;
 }
+
+/*
+  For links to embeds NOT to be shown, uncomment the following
+  and comment out the other section below.
+*/
+
+/*
+.markdown-preview-view .markdown-embed-link,
+.markdown-preview-view .file-embed-link {
+  display: none;
+}
+*/
+
+/*
+  For links to embeds to BE shown, uncomment the following
+  until the "End link show/hide stuff" comment
+  and comment out the section above.
+*/
+
+/* Link icon */
+.markdown-preview-view .markdown-embed-link,
+.markdown-preview-view .file-embed-link {
+  top: 0;
+  right: 0;
+  left: unset;
+  text-align: right;
+  border-left: none;
+  margin: 0;
+  width: 24px;
+  height: 24px;
+  color: var(--text-faint);
+  cursor: pointer;
+}
+
+/* for Ars Magna theme and others that change ::before */
+.markdown-preview-view .markdown-embed-link::before,
+.markdown-preview-view .file-embed-link::before {
+  display: none;
+}
+
+/* Link icon size & hide */
+.markdown-preview-view .file-embed-link svg,
+.markdown-preview-view .markdown-embed-link svg {
+  height: 24px;
+  width: 24px;
+  opacity: 0;
+  display: unset;
+}
+
+/* show on hover */
+.markdown-preview-view .markdown-embed:hover .file-embed-link svg,
+.markdown-preview-view .markdown-embed:hover .markdown-embed-link svg {
+  opacity: 1;
+}
+
+/* change background on hover, to exactly see what’s embedded */
+.markdown-preview-view .markdown-embed:hover,
+.markdown-preview-view .file-embed:hover {
+}
+
+/* End link show/hide stuff */
+
+
+
+/* remove border and scroll */
+/* unfortunately needs !important for some themes */
+
+.markdown-preview-view .markdown-embed,
+.markdown-preview-view .file-embed {
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+
+.markdown-preview-view .markdown-embed-content,
+.markdown-preview-view .markdown-embed-content > .markdown-preview-view { 
+  max-height: unset;
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+
+/* remove <br> between internal embeds */
+ .markdown-preview-section div > p br,
+ .markdown-preview-section div > br {
+  display: none;
+}
+
+
+/* remove vertical space added by markdown-preview-sizer */
+ div.markdown-preview-sizer.markdown-preview-section {
+  min-height: unset !important;
+  padding-bottom: 0 !important;
+}
+
+/* special considerations for printing (PDF export) */
+@media print {
+
+  /* remove frontmatter box if "Show frontmatter" was enabled */
+  pre.frontmatter {
+    display: none;
+  }
+}
+
+/* Modifications for personal pref */
+:root {
+    --border-sunken: inset -1px -1px var(--bevelBright1), inset 1px 1px var(--bevelDark2), inset -2px -2px var(--bevelBright2), inset 2px 2px var(--bevelDark1);
+
+}
+.markdown-preview-view .markdown-embed,
+.markdown-preview-view .file-embed {
+
+  box-shadow: var(--bevelStyleContainer);
+  padding-left:10px;
+  padding-right:5px;
+}
+.markdown-preview-view .markdown-embed:hover
+{
+  background-color:var(--bottom);
+}
+
+/* Configurable hierarchical bg colors */
+/*
+.markdown-embed
+{
+	background-image: linear-gradient(to right, #005c99 0%, rgba(121,9,9,0) 4%)
+
+}
+.markdown-embed .markdown-embed
+{
+			background-image: linear-gradient(to right, #808000 0%, rgba(121,9,9,0) 4%)
+
+}
+
+.markdown-embed .markdown-embed .markdown-embed
+{
+		background: linear-gradient(90deg, #995c00 0%, rgba(121,9,9,0) 4%);
+
+}
+.markdown-embed .markdown-embed .markdown-embed .markdown-embed
+{
+		background: linear-gradient(90deg, #660000 0%, rgba(121,9,9,0) 4%);
+
+}
+.markdown-embed .markdown-embed .markdown-embed .markdown-embed .markdown-embed
+{
+		background-image: linear-gradient(to right, #6600cc 0%, rgba(121,9,9,0) 4%)
+
+}
+.markdown-embed .markdown-embed .markdown-embed .markdown-embed .markdown-embed .markdown-embed
+{
+	background-image: linear-gradient(to right, #005c99 0%, rgba(121,9,9,0) 4%)
+
+}*/
 .folderNoteEmphasis .workspace-leaf-content[data-type=file-explorer] .nav-folder-title-content
 {
 	padding-left:2px;
@@ -809,11 +982,13 @@ input.slider
 {
 	background-color: var(--level1_a);
 	box-shadow: var(--bevelStyleFolderLabel);
+
 }
 .folderNoteEmphasis .workspace-leaf-content[data-type=file-explorer] .nav-folder-title:hover .nav-folder-title-content
 {
 	background-color: var(--level2_a);
 	box-shadow: var(--bevelStyleFolderLabelHover);
+	border-left: 1px solid var(--level3_a);
 }
 body
 {
@@ -1009,6 +1184,69 @@ body:not(.is-grabbing) .nav-folder-title.is-being-dragged,
 }.view-action:not(:last-child)
 {
 	margin-right:0px;
+}.view-header-nav-buttons .clickable-icon::before,
+.view-header-nav-buttons .clickable-icon::after
+{
+	line-height:100%;
+	margin-bottom:3px;
+}.status-bar
+{
+	border-left:0px;
+}
+.status-bar-item.left-region
+{
+	padding:0px;
+	margin:0px;
+	border-left:0px;
+}
+#quick-explorer
+{
+	padding:0px;
+}
+.explorable.titlebar-button
+{
+
+	box-shadow:var(--bevelStyleButton);
+	background-color:var(--level2);
+}
+.explorable.titlebar-button:hover
+{
+	background-color:var(--level2_a);
+}
+.explorable.titlebar-button .explorable-name
+{
+	padding-right:5px;
+	padding-left:5px;
+}
+.explorable-name,
+.explorable-separator
+{
+	font-size:16px;
+	line-height:22px;
+	height:23px;
+}
+/* Dropdown */
+.qe-popup-menu { 
+	margin-left:33px;
+	max-height:50%;
+	display:flex;
+	flex-direction:column;
+	flex-wrap:nowrap;
+}
+.qe-popup-menu+.qe-popup-menu
+{
+	margin-left:30px;
+}
+.qe-popup-menu .menu-item { 
+	min-height:20px;
+	height:50px;
+	flex-grow: 1;
+	padding-right:10px;
+}
+/* Accents not preferred! */
+#quick-explorer .explorable.selected, #quick-explorer .explorable:hover,
+.qe-popup-menu .menu-item:not(.is-disabled):not(.is-label).selected {
+    background-color: var(--level2);
 }.qsp-recent-file .suggestion-title.qsp-title
 {
 	text-decoration-style: initial;
@@ -1112,7 +1350,7 @@ input.prompt-input:hover, input.prompt-input:focus, input.prompt-input:focus-vis
   height:18px;
 }body
 {
-	--divider-width: 0px;
+	--divider-width: 1px;
 }
 .workspace-split.mod-horizontal.mod-right-split
 {
@@ -1142,6 +1380,7 @@ input.prompt-input:hover, input.prompt-input:focus, input.prompt-input:focus-vis
 {
 	padding-bottom:0;
 }
+/* Vertical */
 .mod-left-split > hr,
 .mod-right-split > hr
 /*.mod-vertical>div>hr*/
@@ -1151,8 +1390,10 @@ input.prompt-input:hover, input.prompt-input:focus, input.prompt-input:focus-vis
 	box-sizing: border-box;
 	display:flex;
 	z-index:99;
-
+	  border-left:1px solid var(--level2);
+  border-right:1px solid var(--level2);
 }
+/* Horizontal */
 .mod-horizontal>div>hr:not(.mod-root hr)
 {
 	display:flex;
@@ -1160,6 +1401,10 @@ input.prompt-input:hover, input.prompt-input:focus, input.prompt-input:focus-vis
 	height:var(--handleSize) !important;
 	flex-direction:column-reverse;
 	border-bottom:0px !important;
+	/*
+	  border-top:1px solid var(--level2);
+  border-bottom:1px solid var(--level2);
+  */
 }body
 {
   --ribbon-background: var(--bottom);
@@ -1170,6 +1415,30 @@ input.prompt-input:hover, input.prompt-input:focus, input.prompt-input:focus-vis
 {
   box-sizing:border-box;
 }
+/*
+.workspace
+{
+  flex-direction:row;
+  flex-wrap:wrap;
+}
+.workspace-ribbon.side-dock-ribbon.mod-left
+{
+  margin-top:0px;
+  margin-left:40px;
+  width:100%;
+  flex-direction:row;
+  flex-grow:100%;
+  height:40px;
+}
+.workspace-split
+{
+  margin-top:40px;
+}
+.side-dock-actions,
+.side-dock-settings
+{
+  flex-direction:row;
+}*/
 .sidebar-toggle-button.mod-left{
     width:40px;
 }
@@ -1192,6 +1461,15 @@ input.prompt-input:hover, input.prompt-input:focus, input.prompt-input:focus-vis
 /* SETTINGS */
 /* some borrowings from Terminal */
 /* Modal Config */
+
+body
+{
+  --input-radius:0px;
+  --toggle-thumb-height:30px;
+  --toggle-radius:3px;
+  --toggle-thumb-radius:3px;
+  --toggle-thumb-color:#aaaaaa;
+}
 
 .vertical-tab-nav-item {
     padding: 2px 8px;
@@ -1233,7 +1511,7 @@ input.prompt-input:hover, input.prompt-input:focus, input.prompt-input:focus-vis
 }
 .modal.mod-community-theme,
 .modal.mod-community-plugin{
-  background-color:var(--level1);
+  background-color: var(--level1_a);
   width: calc(100% - var(--ribbonWidth));
 }
 
@@ -1264,17 +1542,17 @@ input.prompt-input:hover, input.prompt-input:focus, input.prompt-input:focus-vis
 .modal.mod-settings .vertical-tab-header
 {
 	box-shadow:var(--bevelStyleButton);
-  background-color: var(--level1);
+  background-color: var(--level1_a);
 }
 .modal.mod-settings .vertical-tab-content-container
 {
-  background-color: var(--bottom_b);
+  background-color: var(--level1);
 }
 .modal.mod-settings .vertical-tab-content
 {
 	margin-left:5px;
   margin-right:3px;
-	background-color: var(--bottom_b);
+	background-color: var(--level1);
 }
   .modal.mod-settings .vertical-tab-header,
 .modal.mod-settings .vertical-tab-content-container, .vertical-tab-content {
@@ -1357,14 +1635,46 @@ input.prompt-input:hover, input.prompt-input:focus, input.prompt-input:focus-vis
 {
     flex-shrink:1;
 }
+/* Setting button config */
+.dropdown
+{
+  background-color:var(--level1_a);
+}
+.dropdown:hover
+{
+  box-shadow:var(--bevelStyleButton);
+  background-color:var(--level1_b);
+}
 .modal .setting-item-control
 {
-  height:100%;
+  min-height:40px;
 }
 .modal .clickable-icon
 {
-  height:100%;
-  padding:6px 15px;
+  background-color:var(--level1_a);
+  min-height:40px;
+  width:40px;
+}
+.modal .clickable-icon:hover
+{
+  background-color:var(--level1_b)
+}
+.checkbox-container
+{
+  background-color:var(--level3);
+  margin: 0px 9px;
+}
+.setting-command-hotkeys
+{
+  padding-right:5px;
+}
+.setting-hotkey.mod-empty
+{
+    padding:3px 5px;
+}
+.community-modal-details
+{
+  background-color:var(--level1_a);
 }.mod-left-split .workspace-tab-header-container,
 .mod-right-split .workspace-tab-header-container
 {
@@ -1511,6 +1821,15 @@ input.prompt-input:hover, input.prompt-input:focus, input.prompt-input:focus-vis
 .mod-top-right-space .sidebar-toggle-button.mod-right .clickable-icon:hover
 {
 	background-color:var(--level2_a);
+}.status-bar
+{
+	border-top:1px solid var(--level2);
+}
+.status-bar-item
+{
+	border-left:1px solid var(--level2);
+	padding-left:5px;
+	padding-right:5px;
 }/* Tags in editor / preview */
 
 a.tag, .cm-hashtag
